// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenderPaymentCardReaderChargeDetails renders reader charges 1`] = `
<div>
  <div
    class="wcpay-payment-details woocommerce-payments-page"
    style="max-width: 1032px;"
  >
    <div
      class="woocommerce-card woocommerce-table woocommerce-analytics__card transactions-list woocommerce-report-table has-search has-menu has-action"
    >
      <div
        class="woocommerce-card__header"
      >
        <div
          class="woocommerce-card__title-wrapper"
        >
          <h2
            class="woocommerce-card__title woocommerce-card__header-item"
          >
            Card readers
          </h2>
        </div>
        <div
          class="woocommerce-card__action woocommerce-card__header-item"
        >
          <button
            class="components-button woocommerce-table__download-button"
            type="button"
          >
            <svg
              class="gridicon gridicons-cloud-download"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M18 9c-.01 0-.017.002-.025.003C17.72 5.646 14.922 3 11.5 3 7.91 3 5 5.91 5 9.5c0 .524.07 1.03.186 1.52C5.123 11.015 5.064 11 5 11c-2.21 0-4 1.79-4 4 0 1.202.54 2.267 1.38 3h18.593C22.196 17.09 23 15.643 23 14c0-2.76-2.24-5-5-5zm-6 7l-4-5h3V8h2v3h3l-4 5z"
                />
              </g>
            </svg>
            <span
              class="woocommerce-table__download-button__label"
            >
              Download
            </span>
          </button>
        </div>
        <div
          class="woocommerce-card__menu woocommerce-card__header-item"
        >
          <div
            class="woocommerce-ellipsis-menu"
          >
            <div
              class="components-dropdown"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-ellipsis-menu__toggle has-text has-icon"
                title="Choose which values to display"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="dashicon dashicons-ellipsis"
                  focusable="false"
                  height="20"
                  role="img"
                  viewBox="0 0 20 20"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 10c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm12-2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-7 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 9v1.5h16V9H4zm12 5.5h4V13h-4v1.5zm-6 0h4V13h-4v1.5zm-6 0h4V13H4v1.5z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="woocommerce-card__body"
      >
        <div
          aria-hidden="false"
          aria-labelledby="caption-1"
          class="woocommerce-table__table"
          role="group"
        >
          <table>
            <caption
              class="woocommerce-table__caption screen-reader-text"
              id="caption-1"
            >
              Card readers
            </caption>
            <tbody>
              <tr>
                <th
                  class="woocommerce-table__header is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="false"
                  >
                    Reader id
                  </span>
                </th>
                <th
                  class="woocommerce-table__header is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="false"
                  >
                    Status
                  </span>
                </th>
                <th
                  class="woocommerce-table__header is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="false"
                  >
                    Transactions
                  </span>
                </th>
                <th
                  class="woocommerce-table__header is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="false"
                  >
                    Fee
                  </span>
                </th>
              </tr>
              <tr>
                <th
                  class="woocommerce-table__item is-left-aligned"
                  scope="row"
                >
                  1
                </th>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  active
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  3
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  $3.00 USD
                </td>
              </tr>
              <tr>
                <th
                  class="woocommerce-table__item is-left-aligned"
                  scope="row"
                >
                  2
                </th>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  inactive
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  1
                </td>
                <td
                  class="woocommerce-table__item is-left-aligned"
                >
                  $0.00 USD
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RenderPaymentCardReaderChargeDetails renders without reader charges 1`] = `
<div>
  <div
    class="wcpay-payment-details woocommerce-payments-page"
    style="max-width: 1032px;"
  >
    <div
      class="woocommerce-card woocommerce-table woocommerce-analytics__card transactions-list woocommerce-report-table has-search has-menu has-action"
    >
      <div
        class="woocommerce-card__header"
      >
        <div
          class="woocommerce-card__title-wrapper"
        >
          <h2
            class="woocommerce-card__title woocommerce-card__header-item"
          >
            Card readers
          </h2>
        </div>
        <div
          class="woocommerce-card__action woocommerce-card__header-item"
        />
        <div
          class="woocommerce-card__menu woocommerce-card__header-item"
        >
          <div
            class="woocommerce-ellipsis-menu"
          >
            <div
              class="components-dropdown"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-ellipsis-menu__toggle has-text has-icon"
                title="Choose which values to display"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="dashicon dashicons-ellipsis"
                  focusable="false"
                  height="20"
                  role="img"
                  viewBox="0 0 20 20"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 10c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm12-2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-7 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 9v1.5h16V9H4zm12 5.5h4V13h-4v1.5zm-6 0h4V13h-4v1.5zm-6 0h4V13H4v1.5z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="woocommerce-card__body"
      >
        <div
          aria-hidden="false"
          aria-labelledby="caption-0"
          class="woocommerce-table__table"
          role="group"
        >
          <table>
            <caption
              class="woocommerce-table__caption screen-reader-text"
              id="caption-0"
            >
              Card readers
            </caption>
            <tbody>
              <tr>
                <th
                  class="woocommerce-table__header is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="false"
                  >
                    Reader id
                  </span>
                </th>
                <th
                  class="woocommerce-table__header is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="false"
                  >
                    Status
                  </span>
                </th>
                <th
                  class="woocommerce-table__header is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="false"
                  >
                    Transactions
                  </span>
                </th>
                <th
                  class="woocommerce-table__header is-left-aligned"
                  role="columnheader"
                  scope="col"
                >
                  <span
                    aria-hidden="false"
                  >
                    Fee
                  </span>
                </th>
              </tr>
              <tr>
                <td
                  class="woocommerce-table__empty-item"
                  colspan="4"
                >
                  No data to display
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
